Fixed margin on call-to-action mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -328,7 +328,7 @@ footer {
         align-items: center;
         display: flex;
         flex-direction: column;
-        margin: 0;
+        margin: 0 auto;
     }
 
     .phone-register {
